--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -6,12 +6,14 @@
     bottom: 0;
     z-index: 999;
     background-color: rgba(0, 0, 0, 0.603);
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
 
 .modal-window{
+border-radius: 4px;
     width: 400px;
     padding:1.5em ;
     background-color: white;
