--- a/src/common/styles/_templates.scss
+++ b/src/common/styles/_templates.scss
@@ -8,3 +8,9 @@
     max-width: 1200px;
     margin: auto;
 }
+
+%flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
