--- a/src/components/FeaturePost/FeaturePost.module.scss
+++ b/src/components/FeaturePost/FeaturePost.module.scss
@@ -1,7 +1,29 @@
-.full-screen{_
-
 img{
     width: 100%;
-    height: 100wh;
-};
 }
+
+.full-screen{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+
+    img{
+        width: 100%;
+height: 100%;
+object-fit: cover;
+    }
+}
+
+.featured-blog{
+    display: flex;
+
+    img{
+        max-width: 80%;
+        object-fit: cover;
+    }
+    h2{
+        text-align: left;
+    }
+}
+
