--- a/src/pages/pages.module.scss
+++ b/src/pages/pages.module.scss
@@ -6,7 +6,7 @@
     height: 70vh;
     object-fit:cover; 
     align-items: center
-}
+};
 
 
 .wrapper{
@@ -14,17 +14,19 @@
 h1{
 text-align: center;
 }
-}
+};
 
 .line{
     display: flex;
     justify-content: space-around;
    align-items: center;
-}
+};
 
 .all-posts{
     display: flex;
     .featured-post{
         width: 85%;
     }
-}
+};
+
+
